package com.rockstonegame.redisorm.core;

@FunctionalInterface
public interface RedisOrmFunction {
    void execute();
}